--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,8 @@ a:hover {
     background-color: rgb(0, 0, 0, .5);
     padding: 1.75rem 2rem;
     color: white;
+    font-weight: bold;
+    font-style: italic;
 }
 
 .hero-additional {
@@ -316,4 +318,10 @@ img {
     color: red;
     text-decoration: underline;
     cursor: pointer;
+}
+
+.checkout-total {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-left: 18rem;
 }
