--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -103,10 +103,17 @@ ul {
     margin-right: .5rem;
 }
 
-.product-listing, .checkout-page, .product-detail-page {
+.product-listing, .product-detail-page {
     background-image: url("../images/tinted-orange.jpg");
     background-size: cover;
     height: 100%;
+    width: 100%;
+}
+
+.checkout-page {
+    background-image: url("../images/tinted-orange.jpg");
+    background-size: cover;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -223,7 +230,7 @@ img {
 }
 
 .product-detail, .checkout-and-title {
-    padding-bottom: 50vh; //temp
+    padding-bottom: 10%; //temp
 }
 
 .checkout-button {
@@ -324,4 +331,17 @@ img {
     font-size: 1.5rem;
     text-align: center;
     margin-left: 18rem;
+}
+
+.cart-icon {
+    height: 2.8rem;
+    width: 2.8rem;
+    margin-top: auto;
+    margin-right: .8rem;
+}
+
+.icon-header {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
