--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -103,14 +103,14 @@ ul {
     margin-right: .5rem;
 }
 
-.product-listing, .product-detail-page {
+.product-listing {
     background-image: url("../images/tinted-orange.jpg");
     background-size: cover;
     height: 100%;
     width: 100%;
 }
 
-.checkout-page {
+.checkout-page, .product-detail-page {
     background-image: url("../images/tinted-orange.jpg");
     background-size: cover;
     min-height: 100vh;
@@ -230,7 +230,7 @@ img {
 }
 
 .product-detail, .checkout-and-title {
-    padding-bottom: 10%; //temp
+    padding-bottom: 10%; 
 }
 
 .checkout-button {
@@ -276,8 +276,7 @@ img {
     gap: 1rem;
     border: 1px solid black;
   
-    min-width: 450px; // investigate media queries and/or other sizing or positioning options 
-
+    min-width: 60%;
 }
 
 .checkout-image {
@@ -344,4 +343,37 @@ img {
     align-items: center;
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 1000px) {
+    .checkout-item {
+        min-width: 100%;
+    }
+
+    .hero-title {
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    .checkout-item {
+        min-width: 100%;
+        flex-direction: column;
+    }
+
+    .checkout-image {
+        width: 100%;
+        height: 100%;
+    }
+
+    .checkout-total {
+        margin-left: 10rem;
+    }
+
+    .hero-title {
+        font-size: 3rem;
+        padding: 0.875rem 1rem;
+    }
+
+    
 }
