--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -141,6 +141,7 @@ ul {
     min-width: 80%;
     max-width: 800px;
     margin-top: 1.5rem;
+    position: relative;
 }
 
 .product-card {
@@ -267,7 +268,6 @@ img {
     width: 100%;
 }
 
-// fix alt tags
 // add some kind of alert after item added
 
 
@@ -310,7 +310,7 @@ img {
 }
 
 .modify-quantity:hover {
-    color: rgb(197, 130, 6);
+    color: rgb(192, 0, 0);
     cursor: pointer;
   
 }
@@ -345,6 +345,34 @@ img {
     justify-content: center;
 }
 
+.checkout-button {
+    margin-top: 1rem;
+}
+
+.item-added {
+    margin-left: auto;
+    position: absolute;
+    left: 100%;
+    bottom: 30%;
+    border: 1px solid black;
+    background-color: rgb(38, 112, 48);
+    color: white;
+
+    padding: .8em;
+    display: none;
+}
+
+.item-added[fade="1"] {
+   display: block;
+    animation: fade 1.5s linear forwards;
+}
+
+  
+  @keyframes fade {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+
 @media (max-width: 1000px) {
     .checkout-item {
         min-width: 100%;
@@ -357,7 +385,7 @@ img {
 
 @media (max-width: 500px) {
     .checkout-item {
-        min-width: 100%;
+        min-width: 120%;
         flex-direction: column;
     }
 
@@ -374,6 +402,7 @@ img {
         font-size: 3rem;
         padding: 0.875rem 1rem;
     }
+
 
     
 }
