--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -110,14 +110,14 @@ ul {
     width: 100%;
 }
 
-.checkout-page, .product-detail-page {
+.checkout-page, .product-detail-page, .thank-you-page {
     background-image: url("../images/tinted-orange.jpg");
     background-size: cover;
     min-height: 100vh;
     width: 100%;
 }
 
-.product-listing, .checkout-page, .product-detail-page {
+.product-listing, .checkout-page, .product-detail-page, .thank-you-page {
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -136,12 +136,20 @@ ul {
    
 }
 
-.checkout-and-title, .product-and-title, .product-detail {
+.checkout-and-title, .product-and-title, .product-detail, .thank-you-container {
     background-color: rgb(227, 227, 227, .5);
     min-width: 80%;
     max-width: 800px;
     margin-top: 1.5rem;
     position: relative;
+}
+
+.thank-you {
+    margin-top: 10%;
+}
+
+.thank-you-container {
+    max-height: 500px;
 }
 
 .product-card {
@@ -155,12 +163,12 @@ ul {
     border-color: darkred;
 }
 
-.product-title {
+.product-title,.checkout-title {
     font-weight: bold;
     color: black;
 }
 
-.product-title:hover {
+.product-title:hover, .checkout-title:hover {
     color: white;
 }
 
@@ -230,7 +238,7 @@ img {
     flex-direction: column;
 }
 
-.product-detail, .checkout-and-title {
+.product-detail, .checkout-and-title, .thank-you-container {
     padding-bottom: 10%; 
 }
 
@@ -357,14 +365,15 @@ img {
     border: 1px solid black;
     background-color: rgb(38, 112, 48);
     color: white;
-
-    padding: .8em;
+    line-height: 1;
+    text-align: center;
+    padding: 1rem;
     display: none;
 }
 
 .item-added[fade="1"] {
    display: block;
-    animation: fade 1.5s linear forwards;
+    animation: fade 2s linear forwards;
 }
 
   
@@ -405,4 +414,10 @@ img {
 
 
     
+}
+
+@media (max-width: 350px) {
+    .item-added {
+        left: 90%;
+    }
 }
