Adjust margins for pages to make background visible

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -147,7 +147,7 @@ ul {
   background-color: rgb(227, 227, 227, 0.5);
   min-width: 80%;
   max-width: 800px;
-  margin-top: 1.5rem;
+  margin: 1.5rem;
   position: relative;
 }
 
