--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -405,14 +405,24 @@ ul {
 }
 
 @media (max-width: 500px) {
+  .checkout-description,
+  .remove-item {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+  }
+
+  .page-title {
+    font-size: 1.6rem;
+  }
+
   .checkout-item {
-    min-width: 120%;
+    min-width: 90%;
     flex-direction: column;
   }
 
   .checkout-image {
-    width: 100%;
-    height: 100%;
+    width: 13rem;
+    height: 13rem;
   }
 
   .checkout-total {
@@ -428,5 +438,15 @@ ul {
 @media (max-width: 350px) {
   .item-added {
     left: 90%;
+  }
+
+  .product-and-title,
+  .product-detail {
+    margin: 1rem;
+  }
+
+  .checkout-image {
+    height: 10rem;
+    width: 10rem;
   }
 }
